17691
```scala
class H { object O; def foo() { object O } }
```
```
[info] v2.10.0-M1 => /Users/jason/usr/scala-v2.10.0-M1-0-g58cb15c
/Users/jason/code/scala/test.scala:1: error: type mismatch;
 found   : object H.this.O
 required: object O
class H { object O; def foo() { object O } }
                              ^
```

This is a regression from 2.9.2
